src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-00.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 5 ms
band: columns 10-89, rows from 6
rules not checked: none

size: 100x30 (primary screen)
cursor: row 9 col 10 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|          synthetic modes
  7|          bold underline red
  8|          printed before the early resize
  9|
 10|
 11|
 12|
 13|
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
  7| 10-13 bold; 15-23 underline; 25-27 fg=1
