src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-01.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 1147 ms
band: columns 8-74, rows from 6
rules not checked: none

size: 84x30 (primary screen)
cursor: row 9 col 8 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|        synthetic modes
  7|        bold underline red
  8|        printed before the early resize
  9|
 10|
 11|
 12|
 13|
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
  7| 8-11 bold; 13-21 underline; 23-25 fg=1
