src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-02.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 2653 ms
band: columns 8-74, rows from 6
rules not checked: none

size: 84x30 (primary screen)
cursor: row 13 col 8 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|        synthetic modes
  7|        bold underline red
  8|        printed before the early resize
  9|        printed after the early resize
 10|        slot 1: waiting
 11|        slot 2: waiting
 12|        slot 3: waiting
 13|
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
  7| 8-11 bold; 13-21 underline; 23-25 fg=1
