src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-04.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 6568 ms
band: columns 12-71, rows from 6, resize mode
rules not checked: band (resize mode)

size: 84x30 (primary screen)
cursor: row 12 col 27 (Hidden)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|           ▏synthetic modes                                             ▕
  7|           ▏bold underline red                                          ▕
  8|           ▏printed before the early resize                             ▕
  9|           ▏printed after the early resize                              ▕
 10|           ▏slot 1: done                                                ▕
 11|           ▏slot 2: done                                                ▕
 12|           ▏slot 3: skipped                                             ▕
 13|           ▏                                                            ▕
 14|           ▏                                                            ▕
 15|           ▏                                                            ▕
 16|           ▏                                                            ▕
 17|           ▏                                                            ▕
 18|           ▏                                                            ▕
 19|           ▏                                                            ▕
 20|           ▏                                                            ▕
 21|           ▏                                                            ▕
 22|           ▏                                                            ▕
 23|           ▏                                                            ▕
 24|           ▏                                                            ▕
 25|           ▏                                                            ▕
 26|           ▏                                                            ▕
 27|           ▏                                                            ▕
 28|           ▏                                                            ▕
 29|           ▏                                                            ▕        72%

hyperlinks: none

attributes:
  6| 11-11 dim; 72-72 dim
  7| 11-11 dim; 12-15 bold; 17-25 underline; 27-29 fg=1; 72-72 dim
  8| 11-11 dim; 72-72 dim
  9| 11-11 dim; 72-72 dim
 10| 11-11 dim; 12-23 fg=2; 72-72 dim
 11| 11-11 dim; 12-23 fg=2; 72-72 dim
 12| 11-11 dim; 12-26 fg=3; 72-72 dim
 13| 11-11 dim; 72-72 dim
 14| 11-11 dim; 72-72 dim
 15| 11-11 dim; 72-72 dim
 16| 11-11 dim; 72-72 dim
 17| 11-11 dim; 72-72 dim
 18| 11-11 dim; 72-72 dim
 19| 11-11 dim; 72-72 dim
 20| 11-11 dim; 72-72 dim
 21| 11-11 dim; 72-72 dim
 22| 11-11 dim; 72-72 dim
 23| 11-11 dim; 72-72 dim
 24| 11-11 dim; 72-72 dim
 25| 11-11 dim; 72-72 dim
 26| 11-11 dim; 72-72 dim
 27| 11-11 dim; 72-72 dim
 28| 11-11 dim; 72-72 dim
 29| 11-11 dim; 72-72 dim; 81-83 dim
