src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-05.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 8098 ms
band: columns 12-71, rows from 6
rules not checked: none

size: 84x30 (primary screen)
cursor: row 13 col 12 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|            synthetic modes
  7|            bold underline red
  8|            printed before the early resize
  9|            printed after the early resize
 10|            slot 1: done
 11|            slot 2: done
 12|            slot 3: skipped
 13|
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
  7| 12-15 bold; 17-25 underline; 27-29 fg=1
 10| 12-23 fg=2
 11| 12-23 fg=2
 12| 12-26 fg=3
