src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-06.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 9578 ms
band: columns 12-71, rows from 0
rules not checked: history (alternate screen)

size: 84x30 (alternate screen)
cursor: row 6 col 43 (Visible)

scrollback: 0 lines

screen:
  0|             alternate screen
  1|
  2|                bold blue
  3|                underlined and italic
  4|                colour on colour
  5|
  6|            waiting on the alternate screen
  7|
  8|
  9|
 10|
 11|
 12|
 13|
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
  0| 12-29 inverse
  2| 16-24 fg=4 bold
  3| 16-25 underline; 31-36 italic
  4| 16-31 fg=220 bg=52
