src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-08.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 12581 ms
band: columns 15-93, rows from 6
rules not checked: none

size: 110x34 (primary screen)
cursor: row 14 col 15 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|$ history 05
  6|            synsynthetic modes
  7|            bolbold underline red
  8|            priprinted before the early resize
  9|            priprinted after the early resize
 10|            sloslot 1: done
 11|            sloslot 2: done
 12|            sloslot 3: skipped
 13|               back on the primary screen
 14|
 15|
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|
 30|
 31|
 32|
 33|

hyperlinks: none

attributes:
  7| 12-18 bold; 20-28 underline; 30-32 fg=1
 10| 12-26 fg=2
 11| 12-26 fg=2
 12| 12-29 fg=3
