src/oracle/snapshots/gutter__oracle__replay__synthetic-modes-broken-rules.snap
---
source: src/oracle/replay.rs
expression: "broken.join(\"\\n\")"
---
synthetic-modes-08 (quiet from 12581 ms): screen row 6 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "s", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 6 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "y", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 6 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "n", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 7 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "b", fgcolor: Default, bgcolor: Default, bold: true, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 7 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "o", fgcolor: Default, bgcolor: Default, bold: true, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 7 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "l", fgcolor: Default, bgcolor: Default, bold: true, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 8 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "p", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 8 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "r", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 8 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "i", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 9 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "p", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 9 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "r", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 9 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "i", fgcolor: Default, bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 10 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "s", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 10 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "l", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 10 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "o", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 11 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "s", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 11 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "l", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 11 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "o", fgcolor: Indexed(2), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 12 col 12: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "s", fgcolor: Indexed(3), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 12 col 13: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "l", fgcolor: Indexed(3), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
synthetic-modes-08 (quiet from 12581 ms): screen row 12 col 14: outside the band's columns 15-93, expected a blank cell, got CellView { contents: "o", fgcolor: Indexed(3), bgcolor: Default, bold: false, italic: false, underline: false, inverse: false }
